# code-graph-ai-summarizer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/code_graph_ai_summarizer/: __init__.py  __main__.py  api.py
src/code_graph_ai_summarizer/analysis/: architecture.py  classify.py  flows.py  graph.py  patterns.py  repo_map.py
src/code_graph_ai_summarizer/cli/: main.py
src/code_graph_ai_summarizer/config/: settings.py
src/code_graph_ai_summarizer/joern/: client.py  queries.py
src/code_graph_ai_summarizer/llm/: client.py
src/code_graph_ai_summarizer/output/: files.py
src/code_graph_ai_summarizer/summarization/: facts_builder.py  prompts.py
src/code_graph_ai_summarizer/utils/: text.py
tests/: test_classify.py  test_joern.py  test_repo_map.py  test_summary_pipeline.py
